changed swagger params
