# swagger.json
@@ -5,10 +5,10 @@
     "description": "This API allows for the user to get, update, add, and delete data from the Prayer Selector database",
     "version": "1.0.0"
   },
-  "host": "localhost:3000",
+  "host": "prayerselectorapi.onrender.com",
   "basePath": "/",
   "schemes": [
-    "http"
+    "https"
   ],
   "paths": {
     "/": {
@@ -257,30 +257,39 @@
         "description": "",
         "parameters": [
           {
-            "name": "body",
+            "name": "user",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
-                "department": {
-                  "example": "any"
+                "fname": {
+                  "type": "string",
+                  "example": ""
                 },
-                "code": {
-                  "example": "any"
+                "lname": {
+                  "type": "string",
+                  "example": ""
                 },
-                "name": {
-                  "example": "any"
+                "username": {
+                  "type": "string",
+                  "example": ""
                 },
-                "section": {
-                  "example": "any"
+                "password": {
+                  "type": "string",
+                  "example": ""
                 },
-                "capacity": {
-                  "example": "any"
-                },
-                "students": {
-                  "example": "any"
+                "classlist": {
+                  "type": "array",
+                  "items": {}
                 }
-              }
+              },
+              "required": [
+                "fname",
+                "lname",
+                "username",
+                "password",
+                "classlist"
+              ]
             }
           }
         ],
@@ -325,6 +334,42 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "user",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "fname": {
+                  "type": "string",
+                  "example": ""
+                },
+                "lname": {
+                  "type": "string",
+                  "example": ""
+                },
+                "username": {
+                  "type": "string",
+                  "example": ""
+                },
+                "password": {
+                  "type": "string",
+                  "example": ""
+                },
+                "classlist": {
+                  "type": "array",
+                  "items": {}
+                }
+              },
+              "required": [
+                "fname",
+                "lname",
+                "username",
+                "password",
+                "classlist"
+              ]
+            }
           }
         ],
         "responses": {
